--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=supplier_product_db
-JWT_SECRET_KEY=a3f5c6e7d8e9f0a1b2c3d4e5f6a7b8c9
+FLASK_ENV=development
+MONGO_URI=mongodb://mongo:27017/users_db
+SECRET_KEY=your_secret_key
